<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="am">AM</string>
    <string name="app_name">LINQ</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="as_cycle_times">Cycle Position Times</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bt_change_pair_password_message">Enter new password with four digits</string>
    <string name="bt_change_pair_password_title">Change Bluetooth Pairing Password</string>
    <string name="bt_not_avail_message">There is no bluetooth adapter on this device. The app will now exit.</string>
    <string name="bt_not_avail_title">Invalid Device</string>
    <string name="bt_not_enabled_message">The app is unable to run with Bluetooth being disabled. Enable bluetooth and restart the app.</string>
    <string name="bt_not_enabled_title">Device Not Enabled</string>
    <string name="bt_status_connecting">Connecting…</string>
    <string name="bt_status_loading">Loading…</string>
    <string name="bt_status_scanning">Scanning…</string>
    <string name="bt_timeout_message">Timeout…\10\10Could not connect to the chosen valve.</string>
    <string name="bt_timeout_title">Error Connecting</string>
    <string name="bt_warning_10_feet">For best results, this device should be within 10 feet of the valve being upgraded.</string>
    <string name="bt_warning_download">Timeout…\10\10The download was unsuccessful. Please ensure this device is within 10 feet of the valve being read and retry the download.</string>
    <string name="bt_warning_upload">Timeout…\10\10The upload was unsuccessful. Please ensure this device is within 10 feet of the valve being read and retry the upload.</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="ci_air_draw_cycle_title">Air Draw Cycle</string>
    <string name="ci_air_draw_info_title">Air Draw Cycle</string>
    <string name="ci_air_draw_message">This position draws in the air into the filter tank. The air is used to oxidize iron and sulfur in the water so the filter media can remove it.</string>
    <string name="ci_air_draw_pulse_chlorine_cycle_title">Air Draw / Chemical Draw\10Cycle</string>
    <string name="ci_air_draw_pulse_chlorine_message">This position draws in the air and oxidizing chemical into the filter tank. The air is used to oxidize iron and sulfur in the water so the filter media can remove it. If the \"Chemical Draw\" setting is not set to 0, the minimum time for this cycle will be forced to 20 minutes. For more information on the oxidizing chemical injection see the \"Chemical Draw\" setting info button.</string>
    <string name="ci_air_draw_pulse_chlorine_setting_message">Enter Air Draw / Chemical Draw Cycle Time Value</string>
    <string name="ci_air_draw_pulse_chlorine_title">Air Draw / Chemical Draw</string>
    <string name="ci_air_draw_setting_message">Enter Air Draw Cycle Time Value</string>
    <string name="ci_air_draw_title">Air Draw</string>
    <string name="ci_air_recharge_freq_message">The Air Recharge Frequency sets the number of days between air recharge cycles. These cycles refill the filter tank with air, which is used to oxidize iron and other contaminates in order to filter them out of the water. This setting should always be set to 1 day, unless advised otherwise by your professional water dealer.</string>
    <string name="ci_air_recharge_freq_setting_message">Enter Air Recharge Frequency Value.</string>
    <string name="ci_air_recharge_freq_title">Air Recharge Frequency</string>
    <string name="ci_air_release_info_title">Air Release Cycle</string>
    <string name="ci_air_release_message">This position slowly opens the treatment tank to the drain. This allows air in the top of the tank to be gently released out the drain.</string>
    <string name="ci_air_release_setting_message">Enter Air Release Cycle Time Value</string>
    <string name="ci_air_release_title">Air Release</string>
    <string name="ci_average_water_usage_per_day_message">The average daily usage shows the average water usage over the last 30 days, excluding days when no water was used.</string>
    <string name="ci_average_water_usage_per_day_title">Average Water Usage\10Per Day</string>
    <string name="ci_backwash_message">This position does a high rate rinse in the opposite direction of normal water flow. This rinses any physical particles filtered by the media in the unit down the drain, and on a softener unit it reorients the resin media for improved ion exchange (softening).</string>
    <string name="ci_backwash_setting_message">Enter Back Wash Cycle Time Value</string>
    <string name="ci_backwash_title">Backwash Cycle</string>
    <string name="ci_brine_draw_message">This position draws in the salt brine solution from the brine tank. It is during this step the ion exchange takes place. The calcium and magnesium that has been captured by the softener resin is knocked loose by the strong brine solution and is rinsed down the drain.</string>
    <string name="ci_brine_draw_setting_message">Enter Brine Draw/Slow Rinse Cycle Time Value</string>
    <string name="ci_brine_draw_title">Brine Draw /\10Slow Rinse Cycle</string>
    <string name="ci_brine_preFill_message">Enabling Pre-fill will fill the Brine Tank prior to the scheduled Regeneration time to provide time for the Tank to make Brine. In some installations, the Pre-fill option reduces salt bridging and makes each regeneration cycle more consistent.</string>
    <string name="ci_brine_preFill_title">Brine Pre-Fill</string>
    <string name="ci_brine_refill_message">This position fills the brine tank with water so that the brine tank can make salt brine for the next regeneration cycle. Be especially careful when editing this setting as it can greatly affect efficiencies and the softeners ability to make soft water.</string>
    <string name="ci_brine_refill_setting_message">Enter Brine Refill Cycle Time Value</string>
    <string name="ci_brine_refill_title">Brine Refill Cycle</string>
    <string name="ci_brine_soak_message">This setting determines the length of time in hours to allow the water to absorb the salt and make the brine solution in the brine tank. Typically 2-3 hours is adequate. Temperature is the biggest factor in the process. The colder the water, the longer the absorption will take.</string>
    <string name="ci_brine_soak_setting_message">Enter Brine Soak Duration Time Value</string>
    <string name="ci_brine_soak_title">Brine Soak Duration</string>
    <string name="ci_chlorine_contact_cycle_title">Chlorine Contact Cycle</string>
    <string name="ci_chlorine_contact_message">This position gives the chlorine that was drawn into the tank time to contact and disinfect the filter media and the filter tank.</string>
    <string name="ci_chlorine_contact_setting_message">Enter Chlorine Contact Cycle Time Value</string>
    <string name="ci_chlorine_contact_title">Chlorine Contact</string>
    <string name="ci_chlorine_draw_cycle_title">Air / Chlorine Draw Cycle</string>
    <string name="ci_chlorine_draw_message">This position is designed to use the internal pump to draw air and chlorine into the filter tank for disinfecting and sanitizing.</string>
    <string name="ci_chlorine_draw_setting_message">Enter Air / Chlorine Draw Cycle Time Value</string>
    <string name="ci_chlorine_draw_title">Air / Chlorine Draw</string>
    <string name="ci_chlorine_rinse_cycle_title">Chlorine Rinse Cycle</string>
    <string name="ci_chlorine_rinse_message">This position is a short rinse that is used to get the chlorine that was drawn in down into the filter tank and media.</string>
    <string name="ci_chlorine_rinse_setting_message">Enter Chlorine Rinse Cycle Time Value</string>
    <string name="ci_chlorine_rinse_title">Chlorine Rinse</string>
    <string name="company_website_short">www.diamondh2o.com</string>
    <string name="dl_connection_notice">(Must have an internet connection)</string>
    <string name="dl_scanning_description">Scanning for nearby Bluetooth devices. When compatible devices are found they will appear in the list below. Please choose the device you would like to connect to at any time.</string>
    <string name="dl_url_description">Go here for more information and instructional videos!</string>
    <string name="id_icon_image_desc">Dialog Icon</string>
    <string name="menu_divider"> </string>
    <string name="npm_advanced_settings">Advanced Settings</string>
    <string name="npm_dashboard">Dashboard</string>
    <string name="npm_dealer_information">Dealer Information</string>
    <string name="npm_device_list">Device List</string>
    <string name="npm_logo_bottom_desc">Chandler Systems, Inc.</string>
    <string name="npm_logo_main_desc">Chandler Systems, Inc.</string>
    <string name="npm_regen_next">Regenerate at\10Next Regen Time</string>
    <string name="npm_regen_next_image_desc">Regenerate at Next Regen Time</string>
    <string name="npm_regen_next_menu">Regenerate Next Time</string>
    <string name="npm_regen_now">Regenerate\10Now</string>
    <string name="npm_regen_now_image_desc">Regenerate Now</string>
    <string name="npm_regen_now_menu">Regenerate Now</string>
    <string name="npm_status_and_history">Status and History</string>
    <string name="sd_negative_button">Share</string>
    <string name="sd_positive_button">OK</string>
    <string name="unit_measurements">Measurements</string>
    <string name="unit_metric">Metric</string>
    <string name="unit_standard">Standard</string>
</resources>