<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="@drawable/nav_background" android:layout_width="210dp" android:layout_height="match_parent">
    <ImageView android:id="@+id/nav_logo_main" android:focusable="true" android:clickable="true" android:layout_width="0dp" android:layout_height="@dimen/npm_logo_main_height" android:layout_marginTop="@dimen/npm_logo_main_margin_top" android:layout_marginBottom="@dimen/npm_logo_main_margin_bottom" android:scaleType="centerInside" android:contentDescription="@string/npm_logo_main_desc" android:layout_marginStart="@dimen/npm_logo_main_margin_start" android:layout_marginEnd="@dimen/npm_logo_main_margin_end" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:srcCompat="@drawable/ic_logo_main"/>
    <ScrollView android:layout_width="0dp" android:layout_height="0dp" android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/regen_now_text" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/nav_logo_main">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/npm_nav_list_text_size" android:textColor="@color/npm_nav_list_text_color" android:id="@+id/device_list" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/npm_nav_list_margin_top_initial" android:text="@string/npm_device_list" android:layout_marginStart="@dimen/npm_nav_list_margin_start" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/nav_logo_main"/>
            <TextView android:textSize="@dimen/npm_nav_list_text_size" android:textColor="@color/npm_nav_list_text_color" android:id="@+id/dashboard" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/npm_nav_list_margin_top" android:text="@string/npm_dashboard" android:layout_marginStart="@dimen/npm_nav_list_margin_start" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/device_list"/>
            <TextView android:textSize="@dimen/npm_nav_list_text_size" android:textColor="@color/npm_nav_list_text_color" android:id="@+id/advanced_settings" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/npm_nav_list_margin_top" android:text="@string/npm_advanced_settings" android:layout_marginStart="@dimen/npm_nav_list_margin_start" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/dashboard"/>
            <TextView android:textSize="@dimen/npm_nav_list_text_size" android:textColor="@color/npm_nav_list_text_color" android:id="@+id/status_and_history" android:focusable="true" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/npm_nav_list_margin_top" android:text="@string/npm_status_and_history" android:layout_marginStart="@dimen/npm_nav_list_margin_start" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/advanced_settings"/>
            <TextView android:textSize="@dimen/npm_nav_list_text_size" android:textColor="@color/npm_nav_list_text_color" android:id="@+id/dealer_information" android:focusable="true" android:visibility="invisible" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/npm_nav_list_margin_top" android:text="@string/npm_dealer_information" android:layout_marginStart="@dimen/npm_nav_list_margin_start" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/status_and_history"/>
        </LinearLayout>
    </ScrollView>
    <ImageView android:id="@+id/regen_now_btn" android:layout_width="@dimen/npm_button_width" android:layout_height="@dimen/npm_button_height" android:layout_marginBottom="@dimen/npm_button_margin_bottom" android:contentDescription="@string/npm_regen_now_image_desc" android:layout_marginEnd="@dimen/npm_button_margin_end" app:layout_constraintBottom_toTopOf="@+id/regen_next_btn" app:layout_constraintStart_toStartOf="@+id/regen_next_btn" app:srcCompat="@drawable/ic_regen_now"/>
    <TextView android:textSize="14dp" android:textColor="@color/npm_nav_list_regen_text_color" android:id="@+id/regen_now_text" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/npm_regen_now" app:layout_constraintBottom_toBottomOf="@+id/regen_now_btn" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/regen_now_btn" app:layout_constraintTop_toTopOf="@+id/regen_now_btn"/>
    <ImageView android:id="@+id/regen_next_btn" android:layout_width="@dimen/npm_button_width" android:layout_height="@dimen/npm_button_height" android:layout_marginBottom="@dimen/npm_button_margin_bottom" android:contentDescription="@string/npm_regen_next_image_desc" android:layout_marginStart="@dimen/npm_button_margin_start" android:layout_marginEnd="@dimen/npm_button_margin_end" app:layout_constraintBottom_toTopOf="@+id/nav_logo_bottom" app:layout_constraintStart_toStartOf="0" app:srcCompat="@drawable/ic_regen_next"/>
    <TextView android:textSize="14dp" android:textColor="@color/npm_nav_list_regen_text_color" android:id="@+id/regen_next_text" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/npm_regen_next" app:layout_constraintBottom_toBottomOf="@+id/regen_next_btn" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/regen_next_btn" app:layout_constraintTop_toTopOf="@+id/regen_next_btn"/>
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/unit_container" android:visibility="gone" android:layout_width="match_parent" android:layout_height="100dp" app:layout_constraintBottom_toTopOf="@+id/nav_logo_bottom" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0">
        <View android:id="@+id/Separator" android:layout_marginTop="8dp" android:layout_marginBottom="10dp" app:layout_constraintBottom_toTopOf="@+id/measurement" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/signature_view.Divider"/>
        <TextView android:textSize="13dp" android:textStyle="bold" android:textColor="@color/npm_nav_list_text_color" android:gravity="center" android:id="@+id/measurement" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/unit_measurements" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/Separator"/>
        <TextView android:textSize="13dp" android:textColor="@color/npm_nav_list_text_color" android:id="@+id/units_standard" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginBottom="64dp" android:text="@string/unit_standard" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/unit_toggle_nav" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/measurement"/>
        <Switch android:id="@+id/unit_toggle_nav" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/units_standard" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0"/>
        <TextView android:textSize="13dp" android:textColor="@color/npm_nav_list_text_color" android:id="@+id/units_metric" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/unit_metric" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/units_standard" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/unit_toggle_nav"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView android:id="@+id/nav_logo_bottom" android:layout_width="0dp" android:layout_height="@dimen/npm_logo_bottom_height" android:layout_marginTop="@dimen/npm_logo_bottom_margin_top" android:layout_marginBottom="@dimen/npm_logo_bottom_margin_bottom" android:scaleType="centerInside" android:contentDescription="@string/npm_logo_bottom_desc" android:layout_marginStart="@dimen/npm_logo_bottom_margin_start" android:layout_marginEnd="@dimen/npm_logo_bottom_margin_end" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:srcCompat="@drawable/ic_logo_secondary"/>
</androidx.constraintlayout.widget.ConstraintLayout>
