<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="@dimen/dl_scan_desc_text_size" android:textColor="@color/dl_scan_desc_text_color" android:gravity="center" android:id="@+id/scanning_description" android:padding="@dimen/dl_desc_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dl_scanning_description" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0"/>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout android:id="@+id/swipe_container" android:layout_width="0dp" android:layout_height="0dp" android:layout_marginTop="@dimen/dl_list_margin_top" android:layout_marginBottom="@dimen/dl_list_margin_bottom" android:layout_marginStart="@dimen/dl_margin_start" android:layout_marginEnd="@dimen/dl_margin_end" app:layout_constraintBottom_toTopOf="@+id/link" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/scanning_description">
        <androidx.recyclerview.widget.RecyclerView android:id="@+id/device_list" android:background="@drawable/device_list_border" android:layout_width="match_parent" android:layout_height="match_parent"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
    <TextView android:textSize="@dimen/dl_url_text_size" android:textColorLink="@color/dl_url_text_color" android:autoLink="web" android:id="@+id/link" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/company_website_short" android:layout_marginStart="@dimen/dl_margin_start" android:layout_marginEnd="@dimen/dl_margin_end" app:layout_constraintBottom_toTopOf="@+id/link_description" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0"/>
    <TextView android:textSize="@dimen/dl_url_desc_text_size" android:textColor="@color/dl_url_desc_text_color" android:id="@+id/link_description" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/dl_url_description" android:layout_marginStart="@dimen/dl_margin_start" android:layout_marginEnd="@dimen/dl_margin_end" app:layout_constraintBottom_toTopOf="@+id/connection_note" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0"/>
    <TextView android:textSize="@dimen/dl_connection_desc_text_size" android:textColor="@color/dl_connection_desc_text_color" android:id="@+id/connection_note" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dl_margin_bottom" android:text="@string/dl_connection_notice" android:layout_marginStart="@dimen/dl_margin_start" android:layout_marginEnd="@dimen/dl_margin_end" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0"/>
</androidx.constraintlayout.widget.ConstraintLayout>
