<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="@color/dialog_background" android:padding="@dimen/id_padding" android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:layout_width="match_parent" android:layout_height="match_parent" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0">
        <androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <ImageView android:id="@+id/info_icon" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/id_icon_image_desc" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" app:srcCompat="@drawable/ic_share"/>
            <TextView android:textColor="@color/dialog_title" android:id="@+id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="@+id/info_icon" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/info_icon" app:layout_constraintTop_toTopOf="0" style="@style/signature_view.id_title"/>
            <TextView android:textSize="@dimen/id_msg_text_size" android:textColor="@color/dialog_text" android:gravity="center_horizontal" android:id="@+id/message" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/id_msg_margin_top" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/title"/>
            <Button android:textColor="@color/dialog_button_text" android:id="@+id/button_share" android:layout_width="wrap_content" android:layout_marginTop="@dimen/id_button_margin_top" android:text="@string/sd_negative_button" app:layout_constraintEnd_toStartOf="@+id/button_ok" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/message" style="@style/signature_view.id_button"/>
            <Button android:textColor="@color/dialog_button_text" android:id="@+id/button_ok" android:layout_width="wrap_content" android:layout_marginTop="@dimen/id_button_margin_top" android:text="@string/sd_positive_button" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/button_share" app:layout_constraintTop_toBottomOf="@+id/message" style="@style/signature_view.id_button"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
