<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:id="@+id/drawer_layout" android:layout_width="match_parent" android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar android:id="@+id/toolbar" android:layout_width="match_parent" android:layout_height="wrap_content" android:minHeight="?attr/actionBarSize" app:titleTextColor="@color/toolbar_title_text_color"/>
        <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/intro_container" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent">
            <androidx.viewpager.widget.ViewPager android:id="@+id/intro_viewpager" android:layout_width="match_parent" android:layout_height="match_parent" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
            <me.relex.circleindicator.CircleIndicator android:id="@+id/intro_indicator" android:layout_width="match_parent" android:layout_height="48dp" android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <FrameLayout android:id="@+id/content_pane" android:background="@color/screen_background" android:layout_width="match_parent" android:layout_height="match_parent">
            <ProgressBar android:layout_gravity="center" android:id="@+id/connection_progress" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-25dp" android:indeterminateDrawable="@drawable/progress" style="@style/Widget.ProgressBar.Inverse"/>
            <TextView android:textColor="@color/progress_bar_text_color" android:layout_gravity="center" android:id="@+id/progress_status" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/npm_status_text_margin_top" style="@style/signature_view.StatusOverlayText"/>
        </FrameLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <RelativeLayout android:layout_gravity="start" android:layout_width="@dimen/npm_width" android:layout_height="match_parent">
        <ImageView android:id="@+id/drawer_bg" android:layout_width="match_parent" android:layout_height="match_parent" android:src="@drawable/nav_background" android:scaleType="fitXY" android:contentDescription="@string/id_icon_image_desc" android:alpha="1"/>
        <com.google.android.material.navigation.NavigationView android:layout_gravity="start" android:id="@+id/nav_view" android:background="@android:color/transparent" android:layout_width="match_parent" android:layout_height="match_parent" app:headerLayout="@layout/nav_header" app:itemTextAppearance="@style/signature_view.npm_item" app:itemTextColor="@color/white" app:menu="@menu/drawer_view" style="@style/signature_view.NavView">
            <LinearLayout android:gravity="center" android:layout_gravity="bottom" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
                <androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/unit_container" android:visibility="gone" android:layout_width="match_parent" android:layout_height="100dp">
                    <View android:id="@+id/Separator" android:layout_marginTop="8dp" android:layout_marginBottom="10dp" app:layout_constraintBottom_toTopOf="@+id/measurement" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" style="@style/signature_view.Divider"/>
                    <TextView android:textSize="12dp" android:textStyle="bold" android:textColor="@color/npm_nav_list_text_color" android:gravity="center" android:id="@+id/measurement" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/unit_measurements" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/Separator"/>
                    <TextView android:textSize="12dp" android:textColor="@color/npm_nav_list_text_color" android:id="@+id/units_standard" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginBottom="64dp" android:text="@string/unit_standard" android:layout_marginStart="16dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/unit_toggle" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/measurement"/>
                    <Switch android:id="@+id/unit_toggle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/measurement"/>
                    <TextView android:textSize="12dp" android:textColor="@color/npm_nav_list_text_color" android:id="@+id/units_metric" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/unit_metric" android:layout_marginStart="8dp" android:layout_marginEnd="16dp" app:layout_constraintBaseline_toBaselineOf="@+id/units_standard" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/unit_toggle"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <ImageView android:layout_gravity="center" android:id="@+id/logo_bottom" android:paddingTop="@dimen/npm_logo_bottom_portrait_margin_top" android:paddingBottom="@dimen/npm_logo_bottom_portrait_margin_bottom" android:focusable="true" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:contentDescription="@string/id_icon_image_desc" android:paddingStart="@dimen/npm_logo_bottom_portrait_margin_start" android:paddingEnd="@dimen/npm_logo_bottom_portrait_margin_end" app:srcCompat="@drawable/ic_logo_secondary"/>
            </LinearLayout>
        </com.google.android.material.navigation.NavigationView>
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>
